# rosplane_plugins

./: x.package.xml
bomb_drop/: CMakeLists.txt  package.xml
bomb_drop/include/bomb_drop/: bomb_drop.h
bomb_drop/src/: bomb_drop.cpp  bomb_drop_node.cpp
msg/: WindEstimate.msg
rosplane_plugin_msgs/: CMakeLists.txt  package.xml
rosplane_plugin_msgs/msg/: WindEstimate.msg
tuning_mode/: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
tuning_mode/include/tuning_mode/: tuning_mode.h
tuning_mode/resource/: TuningMode.py  TuningMode.ui
tuning_mode/scripts/: x__tuning_mode
tuning_mode/src/: tuning_mode.cpp  tuning_mode_node.cpp
tuning_mode/src/tuning_mode/: map_subscribers.py  plot_widget.py  rosplot.py  tune_roll.py  tuning_mode.py
tuning_mode/src/tuning_mode/resources/: plot.ui
waypoint_planning/: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
waypoint_planning/launch/: waypoint_planning.launch
waypoint_planning/resource/: MyPlugin.ui
waypoint_planning/scripts/: waypoint_planning
waypoint_planning/src/waypoint_planning/: waypoint_planning.py
wind_estimator/: CMakeLists.txt  package.xml
wind_estimator/include/wind_estimator/: wind_estimator.h
wind_estimator/src/: wind_estimator.cpp  wind_estimator_node.cpp
