<?xml version="1.0"?>
<package format="2">
  <name>tuning_mode</name>
  <version>0.0.0</version>
  <description>The tuning_mode package</description>

  <maintainer email="spoketire@gmail.com">Erich Nygaard</maintainer> -->

  <license>BSD</license>


  <author email="spoketire@gmail.com">Erich Nygaard</author> -->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rqt_gui</build_export_depend>
  <build_export_depend>rqt_gui_py</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>


  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>

  </export>
</package>
