<package>
  <name>waypoint_planning</name>
  <version>2.0.2</version>
  <description>The waypoint_planning package</description>

  <maintainer email="tim@whitings.org">Tim Whiting</maintainer>

  <author>Tim Whiting</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>python_qt_binding</run_depend>
  <run_depend>qt_gui</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>python-rospkg</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rosnode</run_depend>
  <run_depend>rqt_py_common</run_depend>
  <run_depend>rosplane_msgs</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>

</package>
